--- a/index.html
+++ b/index.html
@@ -32,19 +32,19 @@
     <div class="parentContainer">    
         <div class = options>
             <div class="rock">
-                <img class="btn grow" id="rock" src="./images/Rock.png" />
+                <img class="btn grow" id="rock" src="./images/rock.png" />
             </div>
             <div class="scissors">
-                <img class="btn" id="scissors" src="./images/Scissors.png" />
+                <img class="btn" id="scissors" src="./images/scissors.png" />
             </div>
             <div class="paper">
-                <img class="btn" id="paper" src="./images/Paper.png" />
+                <img class="btn" id="paper" src="./images/paper.png" />
             </div>
             <div class="lizard">
-                <img class="btn" id="lizard" src="./images/Lizard.png" />
+                <img class="btn" id="lizard" src="./images/lizard.png" />
             </div>
             <div class="spock">
-                <img class="btn" id="spock" src="./images/Spock.png" />
+                <img class="btn" id="spock" src="./images/spock.png" />
             </div>
         </div>
         <div class="options_comp">
